# actor-rust-scraper

./: CHANGELOG.md  Cargo.toml  Dockerfile  FIX_SUMMARY.md  INPUT.json  INPUT_SCHEMA.json  LIGHTNING_README.md  README.md  example.py  requirements.txt  shopify_scraper.py  test_scraper.py
examples/: basic_usage.rs  benchmark.rs
src/: actor.rs  basic_crawler.rs  data_wrangling.rs  dataset.rs  lib.rs  lightning_scraper.rs  main.rs  models.rs  multi_website_scraper.rs  output.rs  schema.rs  scraper.rs  storage.rs
tests/: integration_tests.rs
