[package]
name = "shopify-lightning-scraper"
version = "1.0.0"
edition = "2021"
authors = ["admin@nogl.tech"]
description = "Lightning-fast Shopify product scraper with advanced filtering and parallel processing"
license = "MIT"
repository = "https://github.com/nogl-tech/shopify-lightning-scraper"
keywords = ["shopify", "scraper", "ecommerce", "products", "api", "rust", "fast"]
categories = ["web-programming::http-client", "web-programming::scraping"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
url = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.1"
once_cell = "1.19"